prevent wrapping on numerical display

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -35,6 +35,7 @@
   font-size: 20px;
   font-family: 'Courier New', Courier, monospace;
   background-color: #FFFFFF;
+  overflow: hidden;
 }
 
 .operand-button {
